[gd_scene load_steps=5 format=3 uid="uid://cimfsyn1lj3c7"]

[ext_resource type="Script" uid="uid://cng754emwdrr7" path="res://scripts/main.gd" id="1_qkbeq"]
[ext_resource type="Script" uid="uid://b77tyuhg6gub1" path="res://addons/split_screen_2d/split_screen_2d.gd" id="2_8r4by"]
[ext_resource type="PackedScene" uid="uid://byjsyqi4d1xia" path="res://escenas/Modelos base (mapas y player)/mapa.tscn" id="3_mk8gy"]
[ext_resource type="PackedScene" uid="uid://bklj2r23yv7p4" path="res://UI/opciones.tscn" id="4_kgy45"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_qkbeq")

[node name="SplitScreen2D" type="Node2D" parent="." node_paths=PackedStringArray("play_area")]
script = ExtResource("2_8r4by")
play_area = NodePath("Mapa")
metadata/_custom_type_script = "uid://b77tyuhg6gub1"

[node name="Mapa" parent="SplitScreen2D" instance=ExtResource("3_mk8gy")]

[node name="UILayer" type="CanvasLayer" parent="SplitScreen2D"]

[node name="Opciones" parent="SplitScreen2D/UILayer" instance=ExtResource("4_kgy45")]
layout_direction = 4
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
script = null

[node name="Spawns-J-E" type="Node" parent="SplitScreen2D"]

[node name="PuntoRespawn1" type="Marker2D" parent="SplitScreen2D/Spawns-J-E"]
position = Vector2(390, 374)

[node name="PuntoRespawn2" type="Marker2D" parent="SplitScreen2D/Spawns-J-E"]
position = Vector2(824, 53)

[node name="PuntoRespawn3" type="Marker2D" parent="SplitScreen2D/Spawns-J-E"]
position = Vector2(160, 56)
